--- a/Test1/Test1.csproj
+++ b/Test1/Test1.csproj
@@ -212,6 +212,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Employee\EmpView.cshtml" />
     <Content Include="Views\Emp1\Emp1View.cshtml" />
+    <Content Include="Views\Employee\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
