--- a/Test1/Test1.csproj
+++ b/Test1/Test1.csproj
@@ -130,9 +130,17 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\Emp1Controller.cs" />
     <Compile Include="Controllers\EmployeeController.cs" />
+    <Compile Include="Controllers\EmployeeSalaryDetailsController.cs" />
+    <Compile Include="Controllers\EmpNewController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Models\employee.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\employee_salary_details.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Model1.Context.cs">
       <AutoGen>True</AutoGen>
@@ -216,6 +224,11 @@
     <Content Include="Views\Employee\Edit.cshtml" />
     <Content Include="Views\Emp1\Createnew.cshtml" />
     <Content Include="Views\Emp1\EditNew.cshtml" />
+    <Content Include="Views\EmpNew\EmpNewView.cshtml" />
+    <Content Include="Views\EmpNew\CreateEmp.cshtml" />
+    <Content Include="Views\EmpNew\EditEmp.cshtml" />
+    <Content Include="Views\EmployeeSalaryDetails\EmpSalView.cshtml" />
+    <Content Include="Views\EmployeeSalaryDetails\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
